# ab-test-analyzer

./: .env.example  .gitignore  AGENT.md  ARCHITECTURE.md  README.md  pyproject.toml
src/: __init__.py  ai_interface.py  cli_chat.py  config.py  constants.py  exceptions.py  logging_config.py  main.py  models.py
src/core/decision/: decision.py
src/core/ingestion/: ingestion.py
src/core/metrics/: metrics.py  notes.md
src/core/normalization/: __init__.py  normalization.py
src/core/preprocessing/: analise.ipynb  preprocessing.py
src/core/statistics/: __init__.py  statistics.py
src/core/validation/: validation.py
src/integrations/google_sheets/: sheets_service.py
src/llm/: llm_service.py
src/orchestrator/: orchestrator.py
src/reporting/: report_service.py
tests/: test_decision.py  test_integration.py  test_metrics.py  test_preprocessing.py  test_statistics.py  test_validation.py
